--- a/CSS/style.css
+++ b/CSS/style.css
@@ -96,6 +96,10 @@ display: flex;
 .menu-nav{
     display: flex;
 }
+.menu-nav::before{
+   content: "";
+}
+
 .menu-nav-item:not(:last-child){
     margin-right: 50px;
 }
@@ -153,8 +157,8 @@ ul {
     /* Hero */
 
 .hero-title {
-    color: var(--primary-title-color) ;
-    /* background: rgba(47, 48, 58, 0.8); */
+    color: var(--primary-white-color) ;
+    /* background: rgba(47, 48, 58, 0.8);  */
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -162,10 +166,26 @@ ul {
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 30px;
-     padding-top: 200px; 
-  
-  
-}
+    padding-top: 200px; 
+    }
+
+    .block-hero{
+        width: 1600px;
+        height: 600px;
+        margin: auto;
+        /* max-width: 1600px; */
+        text-align: center;
+        background-image: linear-gradient(
+            to bottom,
+            rgba(47, 48, 58, 0.8),
+            rgba(47, 48, 58, 0.8)
+        ),
+            url("../images/Headerimg.jpg");
+        background-size: cover;
+     
+
+    }
+    
 
 .button{ 
     color: var(--primary-title-color);
@@ -346,11 +366,15 @@ margin-right: 10px;
 
 
 /* Постоянные клиенты */
+.clients{ 
+    padding-bottom: 94px; 
+}
+
 .clients-list{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom: 94px ;
+   
     
 }
 
@@ -455,6 +479,7 @@ margin-right: 10px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     margin-bottom: 20px;
+  
     text-align: center;
    
 }
@@ -473,7 +498,7 @@ display: flex;
 justify-content: space-around;
 margin-top: 20px;
 text-align: center;
-
+margin-right: 94px;
 }
 .social-footer-links-item{
     text-align: center;
@@ -482,7 +507,49 @@ text-align: center;
 }
 .social-footer-links-item:not(:last-child){
     margin-right: 10px;
+
 }
+
+    .subscribe{ 
+        display: block; 
+        color: var(--primary-white-color); 
+        background-color:var(--footer-background-color); 
+        font-size: 14px; 
+        line-height: 1.14; 
+        letter-spacing: 0.03em; 
+        margin-right: 94px;
+    } 
+     
+     .button-footer{ 
+        display: inline-flex; 
+        padding-left: 29px; 
+        font-weight: bold; 
+        background-color: var(--accent-color); 
+        color: var(--primary-white-color); 
+        text-decoration: none; 
+        border-radius: 4px; 
+        width: 200px; 
+        height: 50px; 
+        align-items: center; 
+        text-align: center; 
+        /* background-image: знак телеграмм ; */
+        background-position: right 28px center;
+    
+     } 
+    
+    .button-footer:hover 
+     .button-footer:focus 
+    
+     
+     .button-footer > .icon-send { 
+         width: 24px; 
+         height: 24px; 
+         margin-right: 10px; 
+         background-color:red;
+         background-image: url("../images/footer/iconsend.svg");
+    
+     } 
+
 /* Портфолио */
   
  
@@ -505,7 +572,7 @@ text-align: center;
       }
 
    .modal-btn{
-    padding: 4px 22px;
+    padding: 6px 22px;
     border-radius: 4px;
     border-color: var(--button-background-color);
     font-weight: 500;
@@ -525,6 +592,13 @@ text-align: center;
        margin-right: auto;
       
    }
+   .works-content{ 
+    padding-top: 20px; 
+    padding-left: 24px; 
+    padding-bottom: 20px; 
+    padding-right: 24px; 
+    border: 1px solid #eeeeee; 
+} 
 
    .works-list{
        display: flex;
