--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,6 +18,10 @@ html {
         margin: 0px;
         list-style: none;
     }
+    .link {
+        text-decoration: none;
+        font-style: normal;
+    }
 
     :root {
         --main-font: "Roboto", sans-serif;
@@ -137,32 +141,32 @@ html {
         color: var(--accent-color);
     }
 
-    .auth-nav-link {
-        color: var(--primary-text-color);
-        font-style: normal;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.02em;
-        margin-right: 30px;
-    }
-
+  
     .auth-nav-link:hover, .auth-nav-link:focus {
         color: var(--accent-color);
     }
 
-    .link {
-        text-decoration: none;
-    }
-    .auth-nav-item{
+    .auth-nav-link{
+        padding-top: 32px;
+        padding-bottom: 32px;
+        fill: var(--primary-text-color);
         color: var(--primary-text-color);
-        font-style: normal;
         font-weight: 500;
         font-size: 14px;
-        line-height: 1.14;
+        line-height: 1.2;
         letter-spacing: 0.02em;
+        display: flex;
+        align-items: center;
+        margin-right: 30px;
+    } 
+    .auth-nav-icon{
         margin-right: 10px;
-}
+    }
+
+    /* .auth-nav-icon:hover,
+    .auth-nav-icon:focus {
+        color: var(--accent-color);
+    } */
 
     /* Hero */
 
