--- a/CSS/style.css
+++ b/CSS/style.css
@@ -165,8 +165,8 @@ html {
 
     /* .auth-nav-icon:hover,
     .auth-nav-icon:focus {
-        color: var(--accent-color);
-    } */
+        fill: var(--accent-color);
+    }  */
 
     /* Hero */
 
@@ -331,7 +331,7 @@ html {
         line-height: 1.18;
         text-align: center;
         margin-top: 10px;
-        margin-bottom: 10px;
+        margin-bottom: 16px;
     }
     .our-team-list {
         display: flex;
@@ -354,19 +354,13 @@ html {
 
 
     /* Social Team */
-    .team-social-list {
-        display: flex;
-        max-width: 206px;
-        margin-right: auto;
-        margin-left: auto;
-        margin-top: 16px;
-        margin-bottom: 24px;
-        justify-content: center;
-    }
+  
 
     .team-social-list {
         display: flex;
         justify-content: center;
+        padding-bottom: 24px;
+        
     }
 
     .team-social-item:not(:last-child) {
@@ -377,7 +371,7 @@ html {
         width: 44px;
         height: 44px;
         border-radius: 50%;
-        background-color: var(--text-dark-theme-color);
+        background-color: var(--primary-white-color);
         background-size: 22px, contain;
         background-position: center;
         background-repeat: no-repeat;
@@ -388,10 +382,7 @@ html {
         fill: var(--accent-color);
     }
 
-    .team-social-list {
-        display: flex;
-        justify-content: center;
-    }
+    
     .team-social-link:hover, .team-social-link:focus{
         background-color:var(--accent-color);
         fill: var(--primary-white-color);
@@ -406,9 +397,7 @@ html {
         width: 20px;
         height: 20px;
     }
-
-   
-    
+ 
     .link {
         text-decoration: none;
         font-style: normal;
@@ -417,12 +406,12 @@ html {
 
 
     /* Постоянные клиенты */
-    .clients .conteiner {
+    .clients .container {
         padding-bottom: 94px;
         padding-top: 94px;
     }
     
-    .conteiner {
+    .container {
         padding-left: 15px;
         padding-right: 15px;
         margin-left: auto;
@@ -460,7 +449,7 @@ html {
         margin-right: 30px;
     }
 
-    .clients-item-link {
+    .clients-item {
         width: 170px;
         height: 90px;
         border: 1px solid #afb1b8;
@@ -469,7 +458,7 @@ html {
         display: flex;
         justify-content: center;
         align-items: center;
-        fill: var(--social-link-color);
+        fill: var(--accent-color);
     }
 
     .clients-logo-link {
@@ -484,10 +473,10 @@ html {
         justify-content: center;
         text-align: center;
         align-items: center;
-        fill: var(--accent-color);
+         fill: var(--accent-color); 
     }
 
-    .clients-item-link:hover, .clients-item-link:focus {
+    .clients-item:hover, .clients-item:focus {
         fill: var(--accent-color);
         border: 1px solid var(--accent-color);
     }
@@ -497,7 +486,7 @@ html {
         border: 1px solid var(--accent-color);
     }
 
-    .clients-item-link:not(:last-child){
+    .clients-item:not(:last-child){
         margin-right: 30px;
     }
 
@@ -636,7 +625,7 @@ html {
         display: flex;
         justify-content: center;
         align-items: center;
-        fill: var(--text-dark-theme-color);
+        fill: var(--primary-white-color);
     }
 
     .footer-center-social-link-picture {
