--- a/CSS/style.css
+++ b/CSS/style.css
@@ -488,7 +488,7 @@ html {
         justify-content: center;
         text-align: center;
         align-items: center;
-        
+        fill: var(--primary-text-color);
     }
 
     /* .clients-item:hover, .clients-item:focus {
@@ -508,35 +508,35 @@ html {
     .clients-item-svg1 {
         width: 44.27px;
         height: 49.23px; 
-        fill:var(--primary-text-color)
+        
     }
     .clients-item-svg2 {
         width: 40px;
         height: 52px;
-        fill:var(--primary-text-color)
+        
     }
     .clients-item-svg3 {
         width: 41px;
         height: 42.6px;
-        fill:var(--primary-text-color)
+       
     }
     .clients-item-svg4 {
         width: 76.66px;
         height: 42.02px;
-        fill:var(--primary-text-color)
+       
     }
     .clients-item-svg5 {
         width: 59px;
         height: 47px;
-        fill:var(--primary-text-color)
+        
     }
     .clients-item-svg6 {
         width: 88.48px;
         height: 45.44px;
-        fill:var(--primary-text-color)
+     
     }
                                 
-
+  
 
 
     /* Logo footer */
@@ -707,6 +707,11 @@ html {
        
     }
 
+    .modal-btn:hover:hover,
+    .modal-btn:focus{
+        box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+        0px 1px 1px rgba(0, 0, 0, 0.12);
+    }
     .filter-list-item:not(:last-child) {
         margin-right: 8px;
     }
