--- a/CSS/style.css
+++ b/CSS/style.css
@@ -141,19 +141,15 @@ html {
         color: var(--accent-color);
     }
 
-    
-  
     .auth-nav-link:hover, .auth-nav-link:focus {
         color: var(--accent-color);
+        fill: var(--accent-color);
     }
     .auth-nav-icon:hover, .auth-nav-icon:focus{
         color: var(--accent-color);
-    }
-
-    .auth-nav-list-item:hover{
-        color: var(--accent-color);
-    }
-    
+        fill: var(--accent-color);
+    } 
+     
     .auth-nav-link{
         padding-top: 32px;
         padding-bottom: 32px;
@@ -707,7 +703,7 @@ html {
        
     }
 
-    .modal-btn:hover:hover,
+    .modal-btn:hover,
     .modal-btn:focus{
         box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
         0px 1px 1px rgba(0, 0, 0, 0.12);
